# WetCourt

./: .env.example  .gitignore  README.md  RUNBOOK.md  SETUP.md  a2f-feasibility.md  sample-benchmark.py  strix-halo-port-notes.md  ue5-metahuman-plan.md  wet-court-architecture.md
dgx-ai-stack/: .env.example  README.md  ai-stack  bench-a2f.py  docker-compose.yml  (+1 more)
firmware/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/gavel/: .gitignore  README.md  deploy.sh  gavel.ino  main.py
firmware/judge-face/: .gitignore  README.md  boot.py  code.py  config.py  deploy.sh  eye_face.py  inputs.py  judge-face.ino  ota.py  otafiles.txt  personas.py  settings.toml.example  test_ota_desktop.py
firmware/judge-neck/: README.md  deploy.sh  judge-neck.ino  main.py  secrets.example.h  secrets.example.py  test_motion_desktop.py  wetline.py
firmware/micropython/: README.md  ota.py  otapush.py  wetline.py
firmware/squirt/: README.md  deploy.sh  main.py  squirt.ino
firmware/src/: main.rs  wifi_config.example.rs
firmware/swear-in/: .gitignore  README.md  deploy.sh  main.py  secrets.example.py
firmware/turret/: README.md  deploy.sh  main.py  turret.ino
orchestrator/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.counsel  README.md  config.dev.toml  config.toml
orchestrator/calibration/: ai_judge.toml  gavel.toml  judge_neck.toml  squirt.toml  turret.toml  vision.toml
orchestrator/crates/counsel/: Cargo.toml  README.md  config.dev.toml  config.toml
orchestrator/crates/counsel/personas/: lawyer.toml
orchestrator/crates/counsel/scripts/: ivr_test.py  make_assets.py  mock_convo_test.py  real_convo_test.py  ringout_test.py  sip_echo_test.py  softphone.py
orchestrator/crates/counsel/src/: config.rs  http.rs  inference.rs  main.rs  persona.rs  recorder.rs
orchestrator/crates/counsel/src/audio/: cover.rs  mirror.rs  mod.rs  vad.rs  wav.rs
orchestrator/crates/counsel/src/call/: agent.rs  context.rs  ivr.rs  mod.rs  operator.rs
orchestrator/crates/counsel/src/rtp/: dtmf.rs  g711.rs  mod.rs  resample.rs
orchestrator/crates/counsel/src/sip/: inbound.rs  mod.rs  outbound.rs  registrar.rs  sdp.rs
orchestrator/crates/crimes-core/: Cargo.toml
orchestrator/crates/crimes-core/src/: lib.rs
orchestrator/crates/crimes-editor/: Cargo.toml  Dockerfile  README.md
orchestrator/crates/crimes-editor/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
orchestrator/crates/crimes-editor/frontend/src/: App.tsx  app.css  crimes.ts  csv.ts  index.tsx
orchestrator/crates/crimes-editor/src/: assets.rs  main.rs
orchestrator/crates/thermal-printer/: Cargo.toml
orchestrator/crates/thermal-printer/examples/: invoice.rs
orchestrator/crates/thermal-printer/src/: config.rs  escpos.rs  lib.rs  main.rs  raster.rs  text.rs  transport.rs
orchestrator/crimes/: wet_court_crimes.json
orchestrator/frontend/: index.html  package-lock.json  package.json  vite.config.ts
orchestrator/frontend/public/: manifest.webmanifest  sw.js
orchestrator/frontend/public/avatars/: README.md
orchestrator/frontend/src/: App.tsx  CaseView.tsx  CrimesPanel.tsx  FaceView.tsx  JudgeFace.tsx  JudgeMindPanel.tsx  PersonaPanel.tsx  Shell.tsx  app.css  audio.ts  crimes.ts  face.ts  gamepad.ts  glitch-processor.js  index.tsx  maintenance.ts  persona.ts  print.ts  robot.ts  robotParams.ts  robotSettings.ts  talkinghead-shim.d.ts  theater.ts  ws.ts
orchestrator/frontend/src/panels/: AiJudgePanel.tsx  AimControl.tsx  AudioPanel.tsx  GavelPanel.tsx  JudgeBodyPanel.tsx  LawyerPanel.tsx  PrintPanel.tsx  SwearInPanel.tsx  TurretPanel.tsx  VisionFeed.tsx  VisionPanel.tsx  common.tsx
orchestrator/personas/: beatrix_plume.toml  core.md  judge_bom.toml  magnus_thorne.toml  remy_calhoun.toml  sunny_vale.toml  wettington.toml
orchestrator/src/: capture.rs  config.rs  lawyer.rs  main.rs  operator_modes.rs  targeting.rs
orchestrator/src/calibration/: mod.rs
orchestrator/src/crimes/: mod.rs
orchestrator/src/display/: assets.rs  autofire.rs  events.rs  mod.rs  print.rs
orchestrator/src/fallbacks/: charges.rs  mod.rs  verdicts.rs
orchestrator/src/hardware/: gate.rs  maintenance.rs  mock.rs  mod.rs  protocol.rs  tcp.rs
orchestrator/src/inference/: a2f.rs  charge.rs  client.rs  cross.rs  mod.rs  stt.rs  tts.rs  verdict.rs
orchestrator/src/personas/: mod.rs  verdict_parse.rs
orchestrator/src/printer/: casebook.rs  custom.rs  mod.rs  record.rs  report.rs  service.rs  templates.rs
orchestrator/src/state_machine/: commands.rs  events.rs  mod.rs  states.rs  transitions.rs
vision/: .dockerignore  Dockerfile  README.md  pyproject.toml  test_click_modes.py  vision.py
(+61 files in other folders)
