[package]
name = "wet-court-firmware"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "wet-court-firmware"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-svc = "0.49"
smart-leds = "0.4"
smart-leds-trait = "0.3"
ws2812-esp32-rmt-driver = "0.10"

[build-dependencies]
embuild = "0.32"
