[workspace]
resolver = "2"
members = ["crates/crimes-core", "crates/crimes-editor", "crates/thermal-printer"]

[package]
name = "booth"
version = "0.1.0"
edition = "2021"

[dependencies]
crimes-core = { path = "crates/crimes-core" }
thermal_printer = { path = "crates/thermal-printer" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tokio-serial = "5"
rust-embed = { version = "8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
figment = { version = "0.10", features = ["toml", "env"] }
tokio-stream = "0.1"
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
async-trait = "0.1"
async-stream = "0.3"
rand = "0.8"
regex = "1"
dotenvy = "0.15"
bytes = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
lto = "thin"
strip = true
