[package]
name = "counsel"
version = "0.1.0"
edition = "2021"

[dependencies]
rsipstack = "0.5"
rtp-rs = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
futures-util = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
bytes = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
