[package]
name = "crimes-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
crimes-core = { path = "../crimes-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
